--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
 @import url(../vendors/normalize.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/footer/footer.css);
