--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendors/normalize.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/section/section.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/footer/footer.css);
