--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,5 @@
 @import url(../blocks/section/section.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/footer/footer.css);
+@import url('../blocks/elements/elements.css');
+@import url('../blocks/element/element.css');
