--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,5 @@
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/element/element.css');
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/btn/btn.css');
 @import url('../blocks/form/form.css');
