--- a/blocks/section/_narrow/section_narrow.css
+++ b/blocks/section/_narrow/section_narrow.css
@@ -1,11 +1,14 @@
 .section_narrow {
   margin-top: 66px;
-  margin-bottom: 60px;
+  padding-bottom: 60px;
   margin-left: 199px;
 }
 
 @media screen and (max-width: 320px) {
   .section_narrow {
-    margin: 48px auto 36px;
+    margin-top: 48px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 36px;
   }
 }
