--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
-@import url(../vendors/normalize.css);
-@import url(../blocks/page/page.css);
-@import url(../blocks/section/section.css);
-@import url(../blocks/header/header.css);
-@import url(../blocks/footer/footer.css);
+@import url('../vendors/normalize.css');
+@import url('../blocks/page/page.css');
+@import url('../blocks/section/section.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/footer/footer.css');
 @import url('../blocks/elements/elements.css');
 @import url('../blocks/element/element.css');
 @import url('../blocks/profile/profile.css');
