--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -4,8 +4,9 @@
 @import url('./__text/element__text.css');
 
 .element {
-  background-color: #fff;
   border-radius: 10px;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
 }
 @media screen and (max-width: 320px) {
   .element {
