feat(modal): add modal block and import to index

--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/btn/btn.css');
 @import url('../blocks/form/form.css');
+@import url('../blocks/modal/modal.css');
