--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -2,4 +2,11 @@
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .5;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
