--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,12 +1,14 @@
+@import url('./__content/modal__content.css');
+@import url('./__closeBtn/modal__closeBtn.css');
+
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: .5;
-    background-color: #000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  justify-content: center;
+  align-items: center;
+  display: none; 
 }
