--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,3 +1,7 @@
-.form {
-  display: none;
-}
+@import url('./__content/form__content.css');
+@import url('./__heading/form__heading.css');
+@import url('./__input-container/form__input-container.css');
+@import url('./__item/form__item.css');
+@import url('./__handlers/form__handlers.css');
+@import url('./__btn/form__btn.css');
+
