--- a/blocks/profile/__heading/profile__heading.css
+++ b/blocks/profile/__heading/profile__heading.css
@@ -6,10 +6,20 @@
   line-height: 56px;
 }
 
+@media screen and (max-width: 768px) {
+  .profile__heading {
+    font-size: 37px;
+    line-height: 50px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .profile__heading {
+    font-size: 32px;
+  }
+}
 @media screen and (max-width: 320px) {
   .profile__heading {
     font-size: 22px;
-    line-height: 56px;
     text-align: center;
     margin-left: 40px;
     margin-right: 12px;
