--- a/blocks/section/_narrow/section_narrow.css
+++ b/blocks/section/_narrow/section_narrow.css
@@ -3,6 +3,25 @@
   padding-bottom: 60px;
   margin-left: 199px;
 }
+@media screen and (max-width: 1024px) {
+  .section_narrow {
+    margin-left: 70px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section_narrow {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .section_narrow {
+    margin-top: 50px;
+    margin-left: 30px;
+    padding-bottom: 36px;
+  }
+}
 
 @media screen and (max-width: 320px) {
   .section_narrow {
