--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,6 +5,13 @@
   min-height: 744px;
 }
 
+@media screen and (max-width: 768px) {
+ .elements {
+    width: 884px;
+    min-height: 628px;
+ } 
+}
+
 @media screen and (max-width: 320px) {
   .elements {
     width: 282px;
