--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,6 +5,11 @@
   margin-bottom: 41px;
 }
 
+@media screen and (max-width: 425px) {
+  .header__logo {
+    margin-left: 30px;
+  }
+}
 @media screen and (max-width: 320px) {
   .header__logo {
     width: 126px;
