--- a/blocks/profile/__addBtn/profile__addBtn.css
+++ b/blocks/profile/__addBtn/profile__addBtn.css
@@ -12,16 +12,22 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 22px 22px;
+    outline: none;
 }
 
 .profile__addBtn:hover {
     cursor: pointer;
     opacity: .6;
 }
+
+@media screen and (max-width: 425px) {
+  .profile__addBtn {
+    width: 370px;
+  }
+}
 @media screen and (max-width: 320px) {
   .profile__addBtn {
     width: 282px;
-    height: 50px;
     padding: 17px 134px;
     background-size: 16px 16px;
   }
