--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -26,8 +26,7 @@
 
 @media screen and (max-width: 320px) {
   .elements__container {
-    display: flex;
-    flex-direction: column;
+    display: block;
     margin-top: 36px;
     margin-bottom: 48px;
   }
