--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -2,5 +2,5 @@
   width: 100%;
   height: calc(100% - 79px);
   background-size: 100%;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 10px 10px 0 0;
 }
