--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -5,7 +5,7 @@
 
 .element {
   border-radius: 10px;
-  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
   background-color: #fff;
 }
 @media screen and (max-width: 320px) {
