--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -4,7 +4,7 @@
   height: 330px;
   background-color: #fff;
   color: #000;
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 25px rgba(0, 0, 0, .15);
   border-radius: 10px;
   padding: 34px 36px 36px;
   position: relative;
