fix: path to .section_narrow

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,7 @@
 @import url('../vendors/normalize.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/section/section.css');
-@import url('./blocks/_narrow/section_narrow.css');
+@import url('../blocks/section/_narrow/section_narrow.css');
 @import url('../blocks/header/header.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/elements/elements.css');
