fix(hotfix/el_text): change space to padding

--- a/blocks/element/__description/element__description.css
+++ b/blocks/element/__description/element__description.css
@@ -1,6 +1,7 @@
 .element__description {
   display: flex;
-  margin: 25px 15px 31px 21px;
+  padding: 25px 15px 31px 21px;
+  margin: 0 auto;
   justify-content: space-between;
   max-width: 246px;
   min-height: 23px;
