--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -7,6 +7,7 @@
   box-shadow: 0 0 25px rgba(0, 0, 0, .15);
   border-radius: 10px;
   padding: 34px 36px 36px;
+  box-sizing: border-box;
   position: relative;
 }
 
