--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -1,7 +1,7 @@
 .modal__content {
   max-width: 430px;
   width: 100%;
-  height: 330px;
+  min-height: 330px;
   background-color: #fff;
   color: #000;
   box-shadow: 0 0 25px rgba(0, 0, 0, .15);
@@ -9,6 +9,7 @@
   padding: 34px 36px 36px;
   box-sizing: border-box;
   position: relative;
+  font-family: 'Inter', 'Arial', sans-serif;
 }
 
 @media screen and (max-width: 425px) {
