--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -4,7 +4,11 @@
   padding-bottom: 13.26px;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  font-family: inherit;
+  font-family: 'Inter', 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
   outline: none;
 }
 
