--- a/blocks/form/__btn/form__btn.css
+++ b/blocks/form/__btn/form__btn.css
@@ -7,6 +7,7 @@
     border: 2px solid #000;
     background-color: #000;
     color: #fff;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
