--- a/blocks/form/__heading/form__heading.css
+++ b/blocks/form/__heading/form__heading.css
@@ -1,6 +1,8 @@
 .form__heading {
   max-width: 330px;
   height: 23px;
+  margin-top: 0;
+  margin-bottom: 54px;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
