--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,7 @@
 @import url('../blocks/header/header.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/elements/elements.css');
-@import url('../blocks/element/element.css');
+@import url('../blocks/card/card.css');
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/form/form.css');
 @import url('../blocks/modal/modal.css');
