--- a/blocks/profile/__heading/profile__heading.css
+++ b/blocks/profile/__heading/profile__heading.css
@@ -4,6 +4,11 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 56px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 47px;
+  padding-bottom: 5px;
 }
 
 @media screen and (max-width: 768px) {
