--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,15 +1,17 @@
 .page {
   margin: auto;
-  min-width: 1280px;
+  max-width: 100vw;
   height: auto;
   font-family: 'Inter', 'Arial', sans-serif;
   background: #000;
   color: #fff;
   text-rendering: optimizeLegibility;
+  font-smoothing: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: auto;
 }
 
+/*
 @media screen and (max-width: 1024px) {
   .page {
     min-width: 1024px;
@@ -33,3 +35,4 @@
       min-width: 320px;
   }
 } 
+*/
