--- a/blocks/modal/__content/modal__content.css
+++ b/blocks/modal/__content/modal__content.css
@@ -1,7 +1,9 @@
 .modal__content {
   max-width: 430px;
+  min-width: 240px;
   width: 100%;
-  min-height: 330px;
+  max-height: 330px;
+  min-height: 258px;
   background-color: #fff;
   color: #000;
   box-shadow: 0 0 25px rgba(0, 0, 0, .15);
@@ -12,14 +14,20 @@
   font-family: 'Inter', 'Arial', sans-serif;
 }
 
-@media screen and (max-width: 425px) {
-  .modal__content {
-    width: calc(100% - 130px);
-    height: auto;
-  }
+.modal_type_imgPopup .modal__content {
+  position: relative;
+  background: none;
+  box-shadow: none;
+  border-radius: 0;
+  max-height: 75vh;
+  padding: 0;
 }
 
-
+@media screen and (max-width: 520px) {
+  .modal__content {
+    width: calc(100% - 51px * 2);
+  }
+}
 @media screen and (max-width: 320px) {
   .modal__content {
     width: calc(100% - 40px * 2);
