--- a/blocks/profile/__addBtn/profile__addBtn.css
+++ b/blocks/profile/__addBtn/profile__addBtn.css
@@ -1,5 +1,5 @@
 .profile__addBtn {
-    width: 150px;
+    max-width: 150px;
     height: 50px;
     padding: 12px 62px;
     margin-top: 35px;
@@ -20,6 +20,11 @@
     opacity: .6;
 }
 
+/*@media screen and (max-width: 648px) {
+  .profile__addBtn {
+   width: 90%;
+  }
+}*/
 @media screen and (max-width: 425px) {
   .profile__addBtn {
     width: 370px;
