--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -8,7 +8,7 @@
 
 .profile {
   max-width: 882px;
-  height: 120px;
+  min-height: 120px;
 }
 
 @media screen and (max-width: 768px) {
@@ -18,13 +18,13 @@
 }
 @media screen and (max-width: 425px) {
   .profile {
-    height: 350px;
+    min-height: 350px;
   } 
 }
 
 @media screen and (max-width: 320px) {
   .profile {
     max-width: 282px;
-    height: 286px;
+    min-height: 286px;
   }
 }
