--- a/pages/index.css
+++ b/pages/index.css
@@ -10,4 +10,5 @@
 @import url('../blocks/form/form.css');
 @import url('../blocks/modal/modal.css');
 @import url('../blocks/modal/_visible/modal_visible.css');
+@import url('../blocks/modal/_type/modal_type_imgPopup.css');
 
