--- a/blocks/form/__heading/form__heading.css
+++ b/blocks/form/__heading/form__heading.css
@@ -9,3 +9,12 @@
   line-height: 29px;
   color: #000;
 }
+
+@media screen and (max-width: 320px) {
+  .form__heading {
+    max-width: 185px;
+    height: 18px;
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
