--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -15,3 +15,14 @@
 .form__item:first-child {
   margin-bottom: 30px;
 }
+
+.form__item::placeholder {
+  color: #C4C4C4;
+}
+
+@media screen and (max-width: 320px) {
+  .form__item {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
