--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -5,27 +5,35 @@
   list-style: none;
   padding-left: 0;
   display: grid;
-  grid-template-columns: repeat(3, 282px);
+  grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));/*3, 1fr*/
   grid-template-rows: repeat(2, 361px);
   gap: 20px 18px;
 }
 
 @media screen and (max-width: 768px) {
   .elements__container {
-    grid-template-columns: repeat(3, 226px);
-    grid-template-rows: repeat(2, 305px);
+    grid-template-rows: repeat(3, 361px);
     gap: 17px 14px;
   }
 }
-  @media screen and (max-width: 425px) {
-    .elements__container {
-      grid-template-columns: repeat(1, 375px);
-      grid-template-rows: repeat(6, 375px);
-    }
+
+
+@media screen and (max-width: 570px) {
+  .elements__container {
+    grid-template-rows: repeat(3, 361px);
   }
+}
+
+@media screen and (max-width: 557px) {
+  .elements__container {
+    grid-template-rows: repeat(6, 361px);
+  }
+}
+
 
 @media screen and (max-width: 320px) {
   .elements__container {
+    max-width: 100%;
     display: block;
     margin-top: 36px;
     margin-bottom: 48px;
