--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,5 +1,7 @@
 @import url('./__description/card__description.css');
+@import url('./__removeBtn/card__removeBtn.css');
 @import url('./__heart-icon/card__heart-icon.css');
+@import url('./__heart-icon/_active/card__heart-icon_active.css');
 @import url('./__img/card__img.css');
 @import url('./__text/card__text.css');
 
