--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -9,6 +9,7 @@
   border-radius: 10px;
   box-shadow: 0 0 25px rgba(0, 0, 0, .15);
   background-color: #fff;
+  height: 361px;
 }
 @media screen and (max-width: 320px) {
   .card {
