feat: add elements to handle user input smoothly

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -2,5 +2,8 @@
 @import url('./__heading/form__heading.css');
 @import url('./__input-container/form__input-container.css');
 @import url('./__item/form__item.css');
+@import url('./__item/_type/form__item_type_error.css');
 @import url('./__btn/form__btn.css');
-
+@import url('./__btn/_disabled/form__btn_disabled.css');
+@import url('./__label/form__label.css');
+@import url('./__error/form__error.css');
