--- a/blocks/form/__item/form__item.css
+++ b/blocks/form/__item/form__item.css
@@ -1,6 +1,7 @@
 .form__item {
   display: block;
   width: 100%;
+  height: 14px;
   padding-bottom: 13.26px;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
@@ -10,6 +11,7 @@
   font-size: 14px;
   line-height: 17px;
   outline: none;
+  position: relative;
 }
 
 .form__item:first-child {
