fix: generic font family

--- a/blocks/form/__error/form__error.css
+++ b/blocks/form/__error/form__error.css
@@ -1,7 +1,7 @@
 .form__error {
  width: 358px;
  color: #ff0000;
- font-family: Inter;
+ font-family: 'Inter', 'Arial', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 12px;
