--- a/blocks/modal/__caption/modal__caption.css
+++ b/blocks/modal/__caption/modal__caption.css
@@ -1,7 +1,7 @@
 .modal__caption {
   max-width: 291px;
   height: 12px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
