--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -4,6 +4,7 @@
 @import url('./__heart-icon/_active/card__heart-icon_active.css');
 @import url('./__img/card__img.css');
 @import url('./__text/card__text.css');
+@import url('./__removeBtn/_type/card__removeBtn_type_hidden.css');
 
 .card {
   border-radius: 10px;
